# py4tga

./: AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  publish_PyPI.yml  publish_pypi.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: tga.ipynb
src/py4tga/: __init__.py  data.py  py4tga.py
tests/: __init__.py  test_py4tga.py
