[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py4tga"
version = "0.1.0"
description = "Python for thermogravimetry analysis"
readme = "README.rst"
authors = [
  {name = "Rahul Ramesh Nair", email = "rahulascents@gmail.com"}
]
maintainers = [
  {name = "Rahul Ramesh Nair", email = "rahulascents@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/rahulrameshnair/py4tga/issues"
changelog = "https://github.com/rahulrameshnair/py4tga/blob/master/changelog.md"
homepage = "https://github.com/rahulrameshnair/py4tga"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

